  -e "s,public QWizard,public KWizard,g; s,#include <qwizard.h>,#include
  <kwizard.h>,g" >> legendbase.h ;
  make[3]: *** No rule to make target `upbase.ui', needed by `upbase.h'.
  Stop.
  make[3]: Leaving directory
  `/tmp/buildd/siduxcc-0.6.5/obj-x86_64-linux-gnu/siduxcc_hermes'
  make[2]: *** [all-recursive] Error 1

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 01 Nov 2007 22:21:30 +0100

siduxcc (0.6.4) unstable; urgency=low

  * fix URL to sidux.com.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 28 Oct 2007 16:08:16 +0100

siduxcc (0.6.3) unstable; urgency=low

  * new naming for the x.org backupfile in accord with sidux-binary-gfx and change-res

 -- Fabian Wuertz <xadras@sidux.com>  Sat, 27 Oct 2007 02:08:06 +0200

siduxcc (0.6.2) unstable; urgency=low

  * de-typos fixed
  * icons: Makefile.am fixed
  * kernel: load problem solved
  * uint problem solved
  * kernel: currentKernelTextLabel & messageTextLabel added
  * de-typos fixed
  * siduxcc: software: -y option removed by apt-show-versions install
  * display: colorDepthComboBox for fglrx users disabled

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 26 Oct 2007 17:41:30 +0200

siduxcc (0.6.1) unstable; urgency=low

  * po: languages files fixed
  * po: some small fixes
  * common folder removed
  * typo 

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 26 Oct 2007 00:22:47 +0200

siduxcc (0.6.0) unstable; urgency=low

  [ Fabian Wuertz ]
  * siduxcc: display: gfx-function added
  * siduxcc: software: clean-function added
  * KCONTROL-UIS --> KDE-UI

  [ Stefan Lippers-Hollmann ]
  * remove execautable bit from simple images.
  * fix icon target, relibtoolize.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 25 Oct 2007 20:47:14 +0200

siduxcc (0.5.12) unstable; urgency=low

  [ Stefan Lippers-Hollmann ]
  * update syntax for Vcs headers in debian/control

  [ Fabian Wuertz ]
  * siduxcc_network: new design
  * siduxcc_network: fwdetect added
  * nicstatus: running/not_running argument added
