@@ -17,7 +17,10 @@ siduxcc (0.6.5) UNRELEASED; urgency=low
   `/tmp/buildd/siduxcc-0.6.5/obj-x86_64-linux-gnu/siduxcc_hermes'
   make[2]: *** [all-recursive] Error 1
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 01 Nov 2007 22:21:30 +0100
+  [ Fabian Wuertz ]
+  * siduxcc-hermes: ugradable packages problem fixed again 
+
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 01 Nov 2007 17:45:46 -0400
 
 siduxcc (0.6.4) unstable; urgency=low
 
